Added more controller & raspberry pi support, added a new mob and a new skill, made many changes and optimizations, and made some quality of life improvements.